updating bg -images and text

--- a/src/app/Ap/Ap.scss
+++ b/src/app/Ap/Ap.scss
@@ -30,9 +30,9 @@
 
   @media only screen and (min-width: 768px) {
     .bg-img {
-        background-image: url("/bg-images/home-bg.png");
+        background-image: url("/bg-images/factory.png");
         background-size: contain;
-        background-position: bottom;
+        background-position: 0px 65%;
         background-repeat: no-repeat;
     }
 }
