roadmap fixes and changed B logo

--- a/src/app/roadmap/roadmap.scss
+++ b/src/app/roadmap/roadmap.scss
@@ -23,8 +23,8 @@
     .bg-towers {
         background-image: url("/bg-images/towers-roadmap.png");
         background-repeat: no-repeat;
-        background-size: contain;
-        background-position: bottom;
+        background-size: cover;
+        background-position:center 0px;
     }
 }
 
