--- a/src/app/roadmap/roadmap.scss
+++ b/src/app/roadmap/roadmap.scss
@@ -40,6 +40,10 @@
     backdrop-filter: blur(2px);
 }
 
+.text-shadow{
+    text-shadow: 0px 17px 26px 0px rgba(0, 0, 0, 0.62) ;
+}
+
 .ccontainer {
     display: flex;
     flex-direction: column;
