--- a/src/app/roadmap/roadmap.scss
+++ b/src/app/roadmap/roadmap.scss
@@ -41,7 +41,7 @@
 }
 
 .text-shadow{
-    text-shadow: 0px 17px 26px 0px rgba(0, 0, 0, 0.62) ;
+    text-shadow: 0px 17px 26px rgba(0, 0, 0, 0.62);
 }
 
 .ccontainer {
