--- a/src/app/roadmap/roadmap.scss
+++ b/src/app/roadmap/roadmap.scss
@@ -20,13 +20,22 @@
 }
 
 @media screen and (min-width: 1200px) {
+    .bg-frame{
+        background-image: url('/bg-images/Frame_35.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center top;
+    }
+}
+
+/* @media screen and (min-width: 1200px) {
     .bg-towers {
         background-image: url("/bg-images/towers-roadmap.png");
         background-repeat: no-repeat;
         background-size: cover;
         background-position:center 0px;
     }
-}
+} */
 
 .bg-footer {
     background-image: url("/photo_5100376236865203014_y-removebg-preview 2.png");
