fix: loading page & fonts fixed

--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -1,15 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&display=swap');
+// @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;200;300;400;500;600;700&display=swap");
 
 html {
     color: white;
     overflow-x: hidden;
-    font-family: 'IBM Plex Mono', monospace;
+    // font-family: "IBM Plex Mono", monospace;
 }
 
-.body {
+html,
+body {
     font-family: var(--font-ibm);
 }
 
