--- a/src/app/roadmap/roadmap.scss
+++ b/src/app/roadmap/roadmap.scss
@@ -21,7 +21,7 @@
         background-image: url("/bg-images/road-year2.png");
         background-repeat: no-repeat;
         background-size: cover cover;
-        background-position: center top;
+        background-position: center;
     }
 }
 
@@ -48,7 +48,7 @@
         background-image: url("/bg-images/road-year3.png");
         background-repeat: no-repeat;
         background-size: cover cover;
-        background-position: center top;
+        background-position: center;
     }
 }
 
