--- a/src/app/roadmap/roadmap.scss
+++ b/src/app/roadmap/roadmap.scss
@@ -11,7 +11,7 @@
     .bg-road1 {
         background-image: url("/bg-images/road-year1.png");
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover cover;
         background-position: center top;
     }
 }
@@ -29,7 +29,7 @@
     .bg-road2 {
         background-image: url("/bg-images/road-year2.png");
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover cover;
         background-position: center top;
     }
 }
@@ -38,7 +38,7 @@
     .bg-road3 {
         background-image: url("/bg-images/road-year3.png");
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover cover;
         background-position: center top;
     }
 }
@@ -57,7 +57,7 @@
     .bg-frame{
         background-image: url('/bg-images/Frame_35.png');
         background-repeat: no-repeat;
-        background-size: cover;
+        background-size: cover cover;
         background-position: center top;
     }
 }
