editing bg-frame

--- a/src/app/roadmap/roadmap.scss
+++ b/src/app/roadmap/roadmap.scss
@@ -57,7 +57,7 @@
     .bg-frame{
         background-image: url('/bg-images/Frame_35.png');
         background-repeat: no-repeat;
-        background-size: auto;
+        background-size: cover cover;
         background-position: center top;
     }
 }
