Adding medium icon

--- a/src/app/roadmap/roadmap.scss
+++ b/src/app/roadmap/roadmap.scss
@@ -56,18 +56,10 @@
     .bg-frame {
         background-image: url("/bg-images/Frame_35.png");
         background-repeat: no-repeat;
-        background-size: auto, auto;
+        background-size: auto;
         background-position: center top;
         
     }
-}
-
-/* Set a fixed background size and position for .bg-frame outside of any media queries */
-.bg-frame {
-    background-image: url("/bg-images/Frame_35.png");
-    background-repeat: no-repeat;
-    background-size: auto,cover;
-    background-position: center top;
 }
 
 .bg-footer {
