Adding poisiotn for the bg for Available div

--- a/src/app/Ap/Ap.scss
+++ b/src/app/Ap/Ap.scss
@@ -41,6 +41,5 @@
   background-image: url('/bg-images/OIP.png');
   background-size: 70%;
   background-repeat: no-repeat;
-  background-position: center center;
-  opacity: 5;
+  background-position: right bottom ;
 }
