Editing the two buttons

--- a/src/app/Ap/Ap.scss
+++ b/src/app/Ap/Ap.scss
@@ -41,5 +41,5 @@
   background-image: url('/bg-images/OIP.png');
   background-size: 70%;
   background-repeat: no-repeat;
-  background-position: right bottom ;
+  background-position: right -35% center ;
 }
